--- a/ugv_sim/config/move_base/base_local_planner_params.yaml
+++ b/ugv_sim/config/move_base/base_local_planner_params.yaml
@@ -3,6 +3,7 @@ TrajectoryPlannerROS:
   min_vel_x: 0.1
   max_vel_theta: 1.0
   min_in_place_vel_theta: 0.4
+  escape_vel: 0.45
 
   acc_lim_theta: 3.2
   acc_lim_x: 2.5
