--- a/ugv_sim/config/move_base/costmap_common_params.yaml
+++ b/ugv_sim/config/move_base/costmap_common_params.yaml
@@ -8,7 +8,7 @@ inflation_radius: 0.55
 plugins:
   - {name: obstacles_3d,      type: "costmap_2d::VoxelLayer"}
   - {name: obstacles_2d,      type: "costmap_2d::ObstacleLayer"}
-  - {name: inflation_layer,   type: "costmap_2d::InflationLayer"}
+ # - {name: inflation_layer,   type: "costmap_2d::InflationLayer"}
 #   # - {name: external_costmap,  type: "costmap_2d::StaticLayer"}
 
 obstacles_3d:
@@ -45,8 +45,8 @@ obstacles_2d:
   raytrace_range:         3.5
   observation_sources: laserscan
   laserscan:
-    data_type: LaserScan
-    topic: /scan
+    data_type: PointCloud2
+    topic: /velodyne
     sensor_frame: bowser2/lidar_link
     # expected_update_rate: 0.05 # VERY conservative, actual is ~700Hz
     # observation_persistence: 0.0
